# WikidataSearch

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_docker.sh  run_frontend_dev.sh  sql_logs.db  start.sh  test.ipynb
data/: sql_logs.db
doc/adr/: 001_ADR_ Language_and_Entity_Type_Sharding.md
examples/: fact-checking.ipynb  named-entity-recognition.ipynb  retrieval-augmented-generation.ipynb
frontend/: index.html  tailwind.config.js
frontend/src/: main.ts
frontend/src/assets/: tailwind.css
frontend/src/components/: Settings.vue
frontend/src/components/field/: FieldAnswer.vue  FieldImage.vue
frontend/src/types/: response-object.d.ts
frontend/src/views/: ChatView.vue
tests/: README.md
tests/analysis/: test_split_benchmark.py
tests/integration/: test_live_routes.py
tests/unit/: conftest.py  test_routes.py  test_search_helpers.py
wikidatachat/: __init__.py  api.py  datastax.py  jina.py  logger.py  translator.py  wikidata.py
wikidatasearch/: __init__.py  analytics.py  api.py  config.py  datastax.py  dependencies.py  jina.py  logger.py  main.py  search.py  translator.py  wikidata.py
wikidatasearch/routes/: __init__.py  frontend.py  health.py  item.py  property.py  similarity.py
wikidatasearch/services/: __init__.py  analytics.py  datastax.py  jina.py  logger.py  search.py  translator.py
wikidatasearch/services/search/: HybridSearch.py  KeywordSearch.py  Search.py  VectorSearch.py  __init__.py
