[project]
name = "wikidatasearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astrapy>=2.0.1",
    "fastapi>=0.116.1",
    "fastapi-cache2>=0.2.2",
    "gunicorn>=23.0.0",
    "langchain-astradb==0.6.0",
    "setuptools>=80.9.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "stopwordsiso>=0.6.1",
    "uvicorn>=0.35.0",
]
